# gitActions

./: Dockerfile  main.py  pyproject.toml  requirements.txt
.github/workflows/: testscript.yml
calculator/addition_package/: __init__.py  __main__.py  addition_module.py
calculator/multiplication_package/: __init__.py  __main__.py  multiplication_module.py
test/: pep8Test.py  test_addition_package.py
